--- a/lib/frontend/templates/page.mustache
+++ b/lib/frontend/templates/page.mustache
@@ -7,7 +7,7 @@ Mousetrap.bind(['e'], function( e ) {
 </script>
 <div id="wiki-wrapper" class="page">
 <div id="head">
-  <h1>{{site_title}}</h1>
+  <h1>{{title}}</h1>
   <ul class="actions">
     <li class="minibutton">
       {{>searchbar}}
@@ -16,6 +16,14 @@ Mousetrap.bind(['e'], function( e ) {
        class="action-edit-page">Home</a></li>
     <li class="minibutton"><a href="{{base_url}}/pages"
       class="action-all-pages">All</a></li>
+    {{^read_only}}
+    <li class="minibutton" class="jaws">
+      <a href="#" id="minibutton-new-page">New</a></li>
+    <li class="minibutton" class="jaws">
+      <a href="#" id="minibutton-rename-page">Rename</a></li>
+    <li class="minibutton"><a href="{{base_url}}/edit/{{escaped_url_path}}"
+       class="action-edit-page">Edit</a></li>
+    {{/read_only}}
     <li class="minibutton"><a href="{{base_url}}/history/{{escaped_url_path}}"
        class="action-page-history">History</a></li>
   </ul>
@@ -43,7 +51,6 @@ Mousetrap.bind(['e'], function( e ) {
     </div>
     {{/has_header}}
     <div class="markdown-body">
-      <h1>{{title}}</h1>
       {{{content}}}
     </div>
   </div>
@@ -59,8 +66,10 @@ Mousetrap.bind(['e'], function( e ) {
 </div>
 <div id="footer">
   <p id="last-edit">Last edited by <b>{{author}}</b>, {{date}}</p>
+  {{^read_only}}
   <p>
     <a id="delete-link" href="{{base_url}}/{{escaped_url_path}}" data-confirm="Are you sure you want to delete this page?"><span>Delete this Page</span></a>
   </p>
+  {{/read_only}}
 </div>
 </div>
