ability to serve static files

--- a/lib/frontend/templates/layout.mustache
+++ b/lib/frontend/templates/layout.mustache
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="{{base_url}}/css/editor.css" media="all">
   <link rel="stylesheet" type="text/css" href="{{base_url}}/css/dialog.css" media="all">
   <link rel="stylesheet" type="text/css" href="{{base_url}}/css/template.css" media="all">
-  <link rel="stylesheet" type="text/css" href="{{base_url}}/css/custom.css" media="all">
+  <link rel="stylesheet" type="text/css" href="{{base_url}}/static/custom.css" media="all">
 
   <!--[if IE 7]>
   <link rel="stylesheet" type="text/css" href="{{base_url}}/css/ie7.css" media="all">
