--- a/lib/frontend/templates/page.mustache
+++ b/lib/frontend/templates/page.mustache
@@ -7,7 +7,7 @@ Mousetrap.bind(['e'], function( e ) {
 </script>
 <div id="wiki-wrapper" class="page">
 <div id="head">
-  <h1>{{& site_title }}</h1>
+  <h1><a href="/">{{& site_title }}</a></h1>
   <ul class="actions">
     <li class="minibutton">
       {{>searchbar}}
