add github link

--- a/lib/frontend/templates/page.mustache
+++ b/lib/frontend/templates/page.mustache
@@ -13,8 +13,9 @@ Mousetrap.bind(['e'], function( e ) {
     <li class="minibutton">
       {{>searchbar}}
     </li>
-    <li class="minibutton"><a href="{{base_url}}/"
-       class="action-edit-page">Home</a></li>
+    <li class="minibutton">
+      <a href="https://github.com/jlongster/nunjucks">Github</a>
+    </li>
     <li class="minibutton"><a href="{{base_url}}/pages"
       class="action-all-pages">All</a></li>
     {{^read_only}}
