--- a/lib/frontend/templates/layout.mustache
+++ b/lib/frontend/templates/layout.mustache
@@ -26,7 +26,10 @@
   }(document));
   </script>{{/mathjax}}
 
-  <title>{{title}}</title>
+  <title>Nunjucks: {{title}}</title>
+  <meta name="description" content="Nunjucks is a full featured templating engine for javascript" />
+  <meta name="author" content="James Long" />
+  <meta name="robots" content="index, follow" />
 </head>
 <body>
 
