fix other pages

--- a/lib/frontend/templates/pages.mustache
+++ b/lib/frontend/templates/pages.mustache
@@ -1,4 +1,5 @@
 <div id="wiki-wrapper" class="results">
+<div id="head-wrapper">
 <div id="head" style="border:none;">
   <h1>{{title}}</h1>
   <ul class="actions">
@@ -12,6 +13,18 @@
     </li>
   </ul>
 </div>
+
+    <div id="navbar">
+      <ul>
+        <li><a href="/">Overview</a></li>
+        <li><a href="/templating">Templating Documentation</a></li>
+        <li><a href="/api">API Documentation</a></li>
+      </ul>
+    </div>
+
+</div>
+
+
 <div id="pages">
 
 {{#has_results}}
