--- a/lib/frontend/templates/history.mustache
+++ b/lib/frontend/templates/history.mustache
@@ -1,4 +1,5 @@
 <div id="wiki-wrapper" class="history">
+<div id="head-wrapper">
 <div id="head">
   <h1>History for <strong>{{title}}</strong></h1>
   <ul class="actions">
@@ -12,6 +13,16 @@
        class="action-edit-page">Edit Page</a></li>
     {{/read_only}}
   </ul>
+</div>
+
+    <div id="navbar">
+      <ul>
+        <li><a href="/">Overview</a></li>
+        <li><a href="/templating">Templating Documentation</a></li>
+        <li><a href="/api">API Documentation</a></li>
+      </ul>
+    </div>
+
 </div>
 <div id="wiki-history">
 
