--- a/lib/frontend/templates/compare.mustache
+++ b/lib/frontend/templates/compare.mustache
@@ -1,4 +1,5 @@
 <div id="wiki-wrapper" class="compare">
+<div id="head-wrapper">
 <div id="head">
   <h1>History for <strong>{{path}}</strong></h1>
 
@@ -16,6 +17,17 @@
        class="action-page-history">Page History</a></li>
   </ul>
 </div>
+
+    <div id="navbar">
+      <ul>
+        <li><a href="/">Overview</a></li>
+        <li><a href="/templating">Templating Documentation</a></li>
+        <li><a href="/api">API Documentation</a></li>
+      </ul>
+    </div>
+
+</div>
+
 
 {{#message}}
 <p>{{message}}</p>
