--- a/lib/frontend/templates/search.mustache
+++ b/lib/frontend/templates/search.mustache
@@ -1,4 +1,5 @@
 <div id="wiki-wrapper" class="results">
+<div id="head-wrapper">
 <div id="head">
   <h1>Search Results for <strong>{{query}}</strong></h1>
   <ul class="actions">
@@ -9,6 +10,17 @@
        class="action-edit-page">Home</a></li>
   </ul>
 </div>
+
+    <div id="navbar">
+      <ul>
+        <li><a href="/">Overview</a></li>
+        <li><a href="/templating">Templating Documentation</a></li>
+        <li><a href="/api">API Documentation</a></li>
+      </ul>
+    </div>
+
+</div>
+
 <div id="results">
 
 {{#has_results}}
